[gd_scene load_steps=13 format=3 uid="uid://cekb6qa5a7s4d"]

[ext_resource type="Script" path="res://start_screen/start_screen.gd" id="1_1ayxy"]
[ext_resource type="Texture2D" uid="uid://b201qd7b8vjc2" path="res://assets/animations/retrobg1.png" id="1_ipscw"]
[ext_resource type="FontFile" uid="uid://dkya41e287c3p" path="res://assets/fonts/m3x6.ttf" id="3_u5dlc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1eegt"]
atlas = ExtResource("1_ipscw")
region = Rect2(0, 0, 416, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0udg"]
atlas = ExtResource("1_ipscw")
region = Rect2(416, 0, 416, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fuqe"]
atlas = ExtResource("1_ipscw")
region = Rect2(832, 0, 416, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbac5"]
atlas = ExtResource("1_ipscw")
region = Rect2(1248, 0, 416, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofbl1"]
atlas = ExtResource("1_ipscw")
region = Rect2(1664, 0, 416, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rvne"]
atlas = ExtResource("1_ipscw")
region = Rect2(2080, 0, 416, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvfml"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eegt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0udg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fuqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbac5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofbl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rvne")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_5xdej"]
font = ExtResource("3_u5dlc")
font_size = 32
font_color = Color(0.08, 1.2, 0.09, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6llg8"]
font = ExtResource("3_u5dlc")
font_color = Color(0.08, 1.07, 0.08, 1)

[node name="StartScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ayxy")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
gui_disable_input = true
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="BackgroundCam" type="Camera2D" parent="SubViewportContainer/SubViewport"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubViewportContainer/SubViewport"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vvfml")
autoplay = "default"
frame_progress = 0.551608

[node name="SubViewportContainer2" type="SubViewportContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer2"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="MenuCam" type="Camera2D" parent="SubViewportContainer2/SubViewport"]
unique_name_in_owner = true
position = Vector2(128, 72)

[node name="Menu" type="Control" parent="SubViewportContainer2/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="SubViewportContainer2/SubViewport/Menu"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -13.9999
offset_right = 128.0
offset_bottom = 13.9999
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1.75, 0, 1)
text = "Super Trippy Bit
"
label_settings = SubResource("LabelSettings_5xdej")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuOptions" type="VBoxContainer" parent="SubViewportContainer2/SubViewport/Menu"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = 15.0
offset_right = 40.5
offset_bottom = 56.0004
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SubViewportContainer2/SubViewport/Menu/MenuOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "Start Game"
label_settings = SubResource("LabelSettings_6llg8")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="SubViewportContainer2/SubViewport/Menu/MenuOptions"]
layout_mode = 2
theme_override_colors/font_color = Color(0.647059, 0.968627, 0.713726, 1)
theme_override_font_sizes/font_size = 4
text = "Options"
label_settings = SubResource("LabelSettings_6llg8")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="SubViewportContainer2/SubViewport/Menu/MenuOptions"]
layout_mode = 2
theme_override_colors/font_color = Color(0.647059, 0.968627, 0.713726, 1)
theme_override_font_sizes/font_size = 4
text = "Exit"
label_settings = SubResource("LabelSettings_6llg8")
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -16.0
offset_right = 80.0
grow_vertical = 0
theme_override_colors/default_color = Color(0, 1.3, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_u5dlc")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Voidmoose"
scroll_active = false
threaded = true
